# QCal

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  sync-to-hf-space.yml
examples/: 01_rabi.ipynb  02_ramsey_drift.ipynb  03_readout_iq.ipynb
qcal/: __init__.py  analyzer.py  codegen.py  data.py  decoder.py  simulator.py
src/qcal/: analyzer.py  cli.py  config.py  data.py  decoder.py  fit.py
